--- a/src/scss/modules/_card.scss
+++ b/src/scss/modules/_card.scss
@@ -2,6 +2,7 @@
   background-color: $white;
   box-shadow: $box-shadow;
   border-radius: 0.625rem;
+  position: relative;
 
   .card-img-content {
     .btn-secondary {
