--- a/src/scss/modules/_button.scss
+++ b/src/scss/modules/_button.scss
@@ -29,5 +29,9 @@
   &-small {
     padding: 0.375rem 0.5rem;
     @include text-small;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 10px;
   }
 }
