--- a/src/scss/modules/_cookie.scss
+++ b/src/scss/modules/_cookie.scss
@@ -4,6 +4,10 @@
   box-shadow: $box-shadow;
   padding: 1rem;
   color: $black;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin: 20px;
 
   @media screen and (max-width: $sm) {
     right: 0.75rem;
